# dbt-etl-poc

./: .gitignore  main.py  prod.architecture.md  pyproject.toml  readme.md
dagster_project/: __init__.py  assets.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/marts/: orders_summary_2.sql
dbt_project/models/staging/: stg_orders.sql
dbt_project/tests/: assert_order_count_reconciles.sql  assert_revenue_reconciles.sql  schema.yml
scripts/: setup_db.py  simulate_data.py
